Finished funcitons (only one parameter tho) and added indentation without dot(possibly with bugs)

--- a/ProgrammingLang/ProgrammingLang.vcxproj
+++ b/ProgrammingLang/ProgrammingLang.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="code.kal" />
+    <None Include="code2.kal" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
