Fixed indent bug, fixed math eval bug going not too far. Fixed math priority rules. Fixed other weird stuff

--- a/ProgrammingLang/ProgrammingLang.vcxproj.filters
+++ b/ProgrammingLang/ProgrammingLang.vcxproj.filters
@@ -26,5 +26,8 @@
     <None Include="code.kal">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="code3.kal">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
