--- a/ProgrammingLang/ProgrammingLang.vcxproj
+++ b/ProgrammingLang/ProgrammingLang.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <None Include="code.kal" />
     <None Include="code2.kal" />
+    <None Include="code3.kal" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
